# openstock

./: .env.example  .gitignore  .gitmodules  AGENTS.md  CODING.md  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  TESTING.md  docker-compose.yml  update-ulimit.sh
vnalpha/: .gitignore  DESIGN.md  Dockerfile  Makefile  README.md  pyproject.toml
vnalpha/configs/: scoring.yaml  services.yaml  universe.yaml
vnalpha/docs/: 01-vision-and-scope.md  02-system-architecture.md  03-data-pipeline.md  05-backtest-and-outcome.md  06-ai-layer.md  07-implementation-roadmap.md  09-workspace-service-design.md  10-roadmap-phases.md  11-deployment-architecture.md  12-operator-runbook.md  13-r0-r4-completion-matrix.md  14-r0-r4-validation-report.md  2026-07-07-deploy-worker-z440.md  2026-07-08-deploy-worker-z440.md  ASSISTANT.md  COMMAND_LAYER.md  FEATURES.md  OPERATIONAL_PROOF_REQUIREMENTS.md  OUTCOMES.md  README.md  RUNBOOK.md  architecture.md  assistant-lifecycle-hardening.md  assistant-research-intelligence-tools.md  auto-data-provisioning.md  branch-protection.md  closed-loop-repair.md  common-implementation-failures.md  four-phase-hardening.md  market-context-methodology.md  model-routing-profiles.md  observability-ai-repair-workflow.md  observability-close-loop-validation.md  observability-correlation-model.md  observability-deploy-and-repair-guide.md  observability-deploy-gates.md  observability-layout.md  observability-modes.md  observability-operator.md  observability-repair-cli.md  (+12 more)
vnalpha/tests/: _intent_and_planner_cases.py  conftest.py  provisioning_queue_worker_support.py  (+271 more)
(+1478 files in other folders)
