[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vnalpha"
version = "0.1.0"
description = "Alpha discovery research workspace for Vietnamese equities"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "textual>=0.60",
    "duckdb>=0.10",
    "httpx>=0.27",
    "pydantic>=2",
    "pyyaml>=6",
    "pandas>=2",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio",
    "ruff>=0.4",
    "respx>=0.21",
]

[project.scripts]
vnalpha = "vnalpha.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-q"]
